# SoftwareSketch

./: CMakeLists.txt  Makefile  README  calc.py  config.h  res_1024.txt  res_256.txt  res_512.txt  res_60.txt  res_600.txt  res_70.txt  res_80.txt  res_90.txt  res_95.txt  res_new_512.txt  res_new_64.txt  run_1_8.py
CBF/: 1  cbf.h  main  main.c
CM/: 1  main  main.c
CS/: 1  1.c  cs.h  main
SL/: 1  1024.txt  128.txt  1500.txt  256.txt  512.txt  64.txt  main.c  sl.h
SlidingSketch/: 1  main.c  sliding.cpp  sliding.h  test  test.cpp
UnivMon/: 1  1.c
elastic/: 1  1.cpp  main
flowradar/: 1  1.c  flowradar.cpp  flowradar.h  main  mvsketch.h  test
include/: EMFSD.h  protocol_parsing.h  xxhash.h
mvsketch/: 1  1.c  mvsketch.cpp  mvsketch.h  test  test_mv.cpp
nitrosketch/: 1  1.c  libcap.c
results/: res_128.txt  res_1500.txt  res_2.txt  res_64.txt  res_99.txt  res_new_1024.txt  res_new_128.txt  res_new_256.txt  rs_all.txt
src/: CMakeLists.txt
src/cbf/: CMakeLists.txt  cbf.h  main.cpp
src/countmin/: CMakeLists.txt  countmin.cpp  countmin.h  main.cpp
src/countsketch/: CMakeLists.txt  countsketch.h  main.cpp
src/elasticsketch/: CMakeLists.txt  HeavyPart-noSIMD.h  LightPart.h  main.cpp  param.h
src/flowradar/: CMakeLists.txt  bloomfilter.h  flowradar.h  main.cpp
src/mv/: CMakeLists.txt  main.cpp  mv.cpp  mv.h
src/nitrosketch/: CMakeLists.txt  main.cpp  nitrosketch.h
src/sketchlearn/: CMakeLists.txt  main.cpp  seed_list.h  sketchlearn.h  twotuple.cpp  twotuple.h
src/time2cycles/: CMakeLists.txt  main.cpp
src/univmon/: CMakeLists.txt  CSketch.h  main.cpp  univmon.h
